Disable subsequence caching for spv2

Invalidation does not currently work properly in spv2 and subsequence
caching would cause subtrees to incorrectly paint when spv2 was enabled.
On real websites this results in flashing content that should have
painted but didn't, or flashes of cached content incorrectly drawn at
the origin.

This patch disables subsequence caching which fixes google.com and
several layout tests.

BUG=596780

Review URL: https://codereview.chromium.org/1820793004

Cr-Commit-Position: refs/heads/master@{#382675}

Former-commit-id: bfb0fc4dbd0648aac537ca64ad6fffad621eb6be